# PrihodUhodInfo

./: .gitignore  CMakeLists.txt  README.md  configParser.cpp  configParser.h  curlConnector.cpp  curlConnector.h  main.cpp
